fix: add scorllbar when TOC too long, #120

--- a/source/css/_partial/_post/_toc.scss
+++ b/source/css/_partial/_post/_toc.scss
@@ -9,6 +9,8 @@
   box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
   word-wrap: break-word;
   box-sizing: border-box;
+  max-height: calc(100% - 40px);
+  overflow-y: auto;
 
   .post-toc-title {
     margin: 0 10px;
